<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeptimoFragment">

    <TextView
        android:id="@+id/txtSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="100dp"
        android:text="@string/txtSubtotal"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDescuento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardProduct"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtDescuento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/txtDescuento"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSubtotal" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="28dp"
        android:text="@string/txtTotal"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/priceTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescuento" />

    <TextView
        android:id="@+id/priceSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="33dp"
        android:text="@string/priceSubtotal"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/priceDescuento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toEndOf="@+id/txtSubtotal"
        app:layout_constraintTop_toBottomOf="@+id/cardProduct" />

    <TextView
        android:id="@+id/priceDescuento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:text="@string/priceDescuento"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDescuento"
        app:layout_constraintTop_toBottomOf="@+id/priceSubtotal" />

    <TextView
        android:id="@+id/priceTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="111dp"
        android:layout_marginRight="111dp"
        android:layout_marginBottom="188dp"
        android:text="@string/priceTotal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtTotal"
        app:layout_constraintTop_toBottomOf="@+id/priceDescuento" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardProduct"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/grotesk_medium"
        android:text="@string/titleCart"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/cardProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>